<resources>
    <string name="app_name">TheWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dev_name">Titus Nangi</string>
    <string name="weather_api_key"></string>

    <string name="tab1">Today</string>
    <string name="tab2">5 DAYS Forecast</string>

    <string name="settings">Settings</string>

    <string name="hatfield">Pretoria</string>
    <string name="pretoria">Pretoria</string>

    <!-- CurrentWeatherFragment all strings -->
    <string name="today">Today</string>
    <string name="sunrise">Sunrise:</string>
    <string name="senset">Sunset:</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="clouds">Clouds</string>
    <string name="winds">Winds</string>
    <string name="unit_c">℃</string>
    <string name="unit_f">℉</string>
    <string name="degree">Degree</string>
    <string name="app_source_code_https_github_com_titus711_theweather">App source code https://github.com/titus711/TheWeather</string>
    <string name="developed_by_ntitus_nangi">developed by\nTitus Nangi</string>
    <string name="theweather_version_1_0_1">TheWeather (Version- 1.0.1)</string>
    <string name="about">About</string>
    <string name="search_by_city">Search by city</string>
    <string name="pretoria">Pretoria</string>
    <string name="enter_city_name_to_search">Enter City Name To Search</string>
    <string name="_5_days_3_hour_forecast">5 Days / 3 Hour Forecast</string>
    <string name="_3_pm">3 PM</string>
    <string name="sunday">Sunday</string>
    <string name="_03_10_2021">03 - 10 - 2021</string>
    <string name="max_temp_30">Max Temp 30</string>
    <string name="min_temp_29">Min Temp 29</string>
    <string name="sunny">sunny</string>
    <string name="_29">29</string>
</resources>