<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SearchActivity">

    <include
        android:id="@+id/search_appbar"
        layout="@layout/all_app_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/searchDetailsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/enter_city_name_to_search"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/relLaySearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:visibility="visible">

                <Switch
                    android:id="@+id/unit_switchSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:checked="false"
                    android:padding="10dp"
                    android:scaleX="2.3"
                    android:scaleY="2.3"
                    android:showText="true"
                    android:textOff="@string/unit_f"
                    android:textOn="@string/unit_c" />

                <ImageView
                    android:id="@+id/weatherImageSearch"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_below="@id/unit_switchSearch"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tempTVSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weatherImageSearch"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/descriptionWeatherSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tempTVSearch"
                    android:layout_centerHorizontal="true"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/cityTVSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionWeatherSearch"
                    android:layout_centerHorizontal="true"
                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/dateTVSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cityTVSearch"
                    android:layout_centerHorizontal="true"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/linLay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateTVSearch"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/sunriseTVSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=""
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/sunsetTVSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text=""
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </LinearLayout>

                <!--  -->
                <LinearLayout
                    android:id="@+id/linLay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateTVSearch"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/humidityTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_humidity"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/pressureTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_pressure"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textStyle="normal" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cloudsTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_cloud"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/windsTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_wind"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tempMaxTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_max_temp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text=""
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/tempMinTVSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableTop="@drawable/ic_min_temp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text=""
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/forecastTVSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linLay2"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal"
                    android:text="@string/_5_days_3_hour_forecast"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".8dp"
                    android:layout_below="@id/forecastTVSearch"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/gray" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weatherListSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/forecastTVSearch"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:foregroundGravity="center_horizontal"
                    android:padding="10dp"
                    android:scrollbarStyle="outsideInset"></androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>